[project]
name = "calibrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.35.3",
    "lerobot[feetech]>=0.3.3",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "torch<=2.8.0",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true