[project]
name = "calibrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.35.3",
    "lerobot",
    "lerobot[smolvla]",
    "torch>=2.7.1",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]
lerobot = { git = "https://github.com/huggingface/lerobot", tag = "main" }

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
