[project]
name = "sandbox-so101-win"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot",
    "lerobot[smolvla]",
    "lerobot[gamepad]",
    "lerobot[feetech]",
    "lerobot[groot]",
    "opencv-python>=4.12.0.88",
    "torch>=2.7.*, <2.8.0",
    "ninja>=1.13.0",
    "flash-attn>=2.8.2",
    "triton-windows>=3.5.0.post21",
    "transformers==4.57.1",
]

[tool.uv.sources]
torch = { index = "torch-cu128" }
lerobot = { git = "https://github.com/huggingface/lerobot", branch = "main" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.10/flash_attn-2.8.2+cu128torch2.7-cp312-cp312-win_amd64.whl" }


[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
